fixed that weird bug with black trianlgges

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,9 @@
         "unordered_map": "cpp",
         "memory_resource": "cpp",
         "string_view": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "random": "cpp",
+        "functional": "cpp",
+        "numeric": "cpp"
     }
 }
