--- a/scenesetup.cfg
+++ b/scenesetup.cfg
@@ -1,18 +1,22 @@
 canvas 256 256
-fov 60
-camera_origin 5 -5 5
-camera_vector -1 1 -1
+fov 5
+camera_origin 50 50 50
+camera_vector -1 -1 -1
 exposure 1
 gamma 2.2
 
-sky_horizon 0.86274509804, 0.98823529412, 1.00000000000
-sky_upper 0.51372549020, 0.65490196078, 0.96470588235
-sky_lower 0.25294117647, 0.20784313725, 0.36274509804
+#sky_horizon 0.86274509804, 0.98823529412, 1.00000000000
+#sky_upper 0.51372549020, 0.65490196078, 0.96470588235
+#sky_lower 0.25294117647, 0.20784313725, 0.36274509804
+
+sky_horizon 0.8 0.8 0.8
+sky_upper 1.6 1.6 1.5
+sky_lower 0.5 0.5 0.505
 
 demo_mat_colour 0.8 0.8 0.8
 demo_mat_roughness 0
 
-geom_path teapot.obj # you need to have a space after this. i dont know why, this doesnt happen with any other config. what the fuck
+geom_path stairs.obj # you need to have a space after this. i dont know why, this doesnt happen with any other config. what the fuck
 geom_offset 0 0 0
 
 render_samples 12
